new,header icon

--- a/ru/news.html
+++ b/ru/news.html
@@ -57,12 +57,13 @@
             <li class="main-nav__item"> <a class="main-nav__link" href="team.html">Команда</a></li>
           </ul>
           <div class="langs">
+            <img src="../assets/img/language_24px.svg" alt="">
             <ul class="langs__list">
-              <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button button_form_circle button_theme_dark" href="#">RU</a>
+              <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link  button_form_circle button_theme_dark" href="#">RU</a>
                 <div class="dropdown-menu__content langs__submenu">
                   <ul class="langs__list">
-                    <li class="langs__item"> <a class="langs__link button button_form_circle button_theme_dark" href="#">EN</a></li>
-                    <li class="langs__item"> <a class="langs__link button button_form_circle button_theme_dark" href="#">CS</a></li>
+                    <li class="langs__item"> <a class="langs__link  button_form_circle button_theme_dark" href="#">EN</a></li>
+                    <li class="langs__item"> <a class="langs__link  button_form_circle button_theme_dark" href="#">CS</a></li>
                   </ul>
                 </div>
               </li>
@@ -72,85 +73,82 @@
       </div>
     </header>
     <main>
-
       <section class="apps__lead">
-            <div class="section__wrapper">
-                <div class="lead__flex">
-                    <div class="lead__image-container apps__lead-image-container">
-                      <div class="apps__lead-image-wrapper"><img src="../assets/img/new/scrin.png" class="apps__lead-image"></div>
-                    </div>
-                    <div class="lead__text-container apps__lead-text-container">
-                        <p class="lead__text">Обновление 05.12.2022</p>
-                        <p class="lead__text">06.12.2022  БЕЗ КАТЕГОРИИОТ   DIANA AKHMETOVA</p>
-                        <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
-                        <details>
-                          <summary>читать больше</summary>
-                          <p>Раскрывающийся текст</p>
-                        </details>
-                    </div>
-                  </div>
-            </div> 
-        </section>
-
-        <section class="apps__lead">
-          <div class="section__wrapper">
-              <div class="lead__flex">
-                  <div class="lead__image-container apps__lead-image-container">
-                    <div class="apps__lead-image-wrapper"><img src="../assets/img/new/scrin.png" class="apps__lead-image"></div>
-                  </div>
-                  <div class="lead__text-container apps__lead-text-container">
-                      <p class="lead__text">Обновление 05.12.2022</p>
-                      <p class="lead__text">06.12.2022  БЕЗ КАТЕГОРИИ ОТ DIANA AKHMETOVA</p>
-                      <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
-                      <details>
-                        <summary>читать больше</summary>
-                        <p>Раскрывающийся текст</p>
-                      </details>
-                        </div>
-                      </div>
-                  </div>
-                </div>
-          </div> 
+        <div class="section__wrapper">
+          <div class="lead__flex">
+            <div class="lead__image-container apps__lead-image-container">
+              <div class="apps__lead-image-wrapper">
+                <img src="../assets/img/new/scrin.png" class="apps__lead-image">
+              </div>
+            </div>
+            <div class="lead__text-container apps__lead-text-container">
+              <p class="lead__text">Обновление 05.12.2022</p>
+              <p class="lead__text">06.12.2022  БЕЗ КАТЕГОРИИОТ   DIANA AKHMETOVA</p>
+              <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
+              <details>
+                <summary>читать больше</summary>
+                <p>Раскрывающийся текст</p>
+              </details>
+            </div>
+          </div>
       </section>
       <section class="apps__lead">
         <div class="section__wrapper">
-            <div class="lead__flex">
-                <div class="lead__image-container apps__lead-image-container">
-                  <div class="apps__lead-image-wrapper"><img src="../assets/img/new/scrin.png" class="apps__lead-image"></div>
-                </div>
-                <div class="lead__text-container apps__lead-text-container">
-                    <p class="lead__text">Обновление 05.12.2022</p>
-                    <p class="lead__text">06.12.2022  БЕЗ КАТЕГОРИИ ОТ DIANA AKHMETOVA</p>
-                    <p class="lead__text">Совсем недавно в SFERA пояилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
-                    <details>
-                      <summary>читать больше</summary>
-                      <p>Раскрывающийся текст</p>
-                    </details>
-                </div>
-              </div>
-        </div> 
-    </section>
-    <section class="apps__lead">
-      <div class="section__wrapper">
           <div class="lead__flex">
-              <div class="lead__image-container apps__lead-image-container">
-                <div class="apps__lead-image-wrapper">
-                  <img src="../assets/img/new/scrin.png" class="apps__lead-image">
-                </div>
-              </div>
-              <div class="lead__text-container apps__lead-text-container">
-                  <p class="lead__text">Обновление 05.12.2022</p>
-                  <p class="lead__text">06.12.2022  БЕЗ КАТЕГОРИИ ОТ DIANA AKHMETOVA</p>
-                  <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
-                  <details>
-                    <summary>читать больше</summary>
-                    <p>Раскрывающийся текст</p>
-                  </details>
-                  
+            <div class="lead__image-container apps__lead-image-container">
+              <div class="apps__lead-image-wrapper">
+                <img src="../assets/img/new/scrin.png" class="apps__lead-image">
               </div>
             </div>
-      </div> 
-  </section>
+            <div class="lead__text-container apps__lead-text-container">
+              <p class="lead__text">Обновление 05.12.2022</p>
+              <p class="lead__text">06.12.2022  БЕЗ КАТЕГОРИИОТ   DIANA AKHMETOVA</p>
+              <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
+              <details>
+                <summary>читать больше</summary>
+                <p>Раскрывающийся текст</p>
+              </details>
+            </div>
+          </div>
+      </section>
+      <section class="apps__lead">
+        <div class="section__wrapper">
+          <div class="lead__flex">
+            <div class="lead__image-container apps__lead-image-container">
+              <div class="apps__lead-image-wrapper">
+                <img src="../assets/img/new/scrin.png" class="apps__lead-image">
+              </div>
+            </div>
+            <div class="lead__text-container apps__lead-text-container">
+              <p class="lead__text">Обновление 05.12.2022</p>
+              <p class="lead__text">06.12.2022  БЕЗ КАТЕГОРИИОТ   DIANA AKHMETOVA</p>
+              <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
+              <details>
+                <summary>читать больше</summary>
+                <p>Раскрывающийся текст</p>
+              </details>
+            </div>
+          </div>
+      </section>
+      <section class="apps__lead">
+        <div class="section__wrapper">
+          <div class="lead__flex">
+            <div class="lead__image-container apps__lead-image-container">
+              <div class="apps__lead-image-wrapper">
+                <img src="../assets/img/new/scrin.png" class="apps__lead-image">
+              </div>
+            </div>
+            <div class="lead__text-container apps__lead-text-container">
+              <p class="lead__text">Обновление 05.12.2022</p>
+              <p class="lead__text">06.12.2022  БЕЗ КАТЕГОРИИОТ   DIANA AKHMETOVA</p>
+              <p class="lead__text">Совсем недавно в SFERA появилась возможность совершать видеозвонки и мы благодарны всем пользователям, кто активно тестирует функционал. Ежедневно нам поступают сообщения от пользователей с замечаниями и пожеланиями, к которым мы относимся очень внимательно.</p>
+              <details>
+                <summary>читать больше</summary>
+                <p>Раскрывающийся текст</p>
+              </details>
+            </div>
+          </div>
+      </section>
     </main>
     <footer class="footer section section_theme_dark" role="footer">
       <div class="footer__container">
