--- a/ru/team.html
+++ b/ru/team.html
@@ -58,12 +58,13 @@
             <li class="main-nav__item"> <a class="main-nav__link active" href="team.html">Команда</a></li>
           </ul>
           <div class="langs">
+            <img src="../assets/img/language_24px.svg" alt="">
             <ul class="langs__list">
-              <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button button_form_circle button_theme_dark" href="#">RU</a>
+              <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link  button_form_circle button_theme_dark" href="#">RU</a>
                 <div class="dropdown-menu__content langs__submenu">
                   <ul class="langs__list">
-                    <li class="langs__item"> <a class="langs__link button button_form_circle button_theme_dark" href="#">EN</a></li>
-                    <li class="langs__item"> <a class="langs__link button button_form_circle button_theme_dark" href="#">CS</a></li>
+                    <li class="langs__item"> <a class="langs__link  button_form_circle button_theme_dark" href="#">EN</a></li>
+                    <li class="langs__item"> <a class="langs__link  button_form_circle button_theme_dark" href="#">CS</a></li>
                   </ul>
                 </div>
               </li>
