--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
 	<body>
 		<div class="shadow-off"></div>
-
+	<div class="header__wrapper">
 		<nav class="nav_menu">
 			<input type="checkbox" class="myCheckBox" id="myCheck">
 			<label for="myCheck" class="checkButton">
@@ -60,10 +60,22 @@
 				<li class="nav_list-item"><a class="nav_list-link" href="./ru/startups.html">Стартапам</a></li>
 				<li class="nav_list-item"><a class="nav_list-link" href="./ru/investment.html">Инвестиции</a></li>
 				<li class="nav_list-item"><a class="nav_list-link" href="./ru/team.html">Команда</a></li>
+				<div class="langs">
+					<img src="./assets/img/language_24px.svg" alt="">
+					<ul class="langs__list">
+						<li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link  button_theme_dark" href="#">RU</a>
+							<div class="dropdown-menu__content langs__submenu">
+								<ul class="langs__list">
+									<li class="langs__item"> <a class="langs__link   button_theme_dark" href="#">EN</a></li>
+									<li class="langs__item"> <a class="langs__link   button_theme_dark" href="#">CS</a></li>
+								</ul>
+							</div>
+						</li>
+					</ul>
+				</div>
 			</ul>
-
 		</nav>
-
+</div>
 
 		<!-- <div class="star-one"></div>
 		<div class="star-two"></div> -->
