--- a/ru/home.html
+++ b/ru/home.html
@@ -13,8 +13,9 @@
   <link href="https://cdn.jsdelivr.net/npm/swiper@8/swiper-bundle.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" href="../assets/css/header.css">
-  <link href="assets/css/styles.dec85f1a.css" rel="stylesheet">
-  <link href="assets/css/home.css" rel="stylesheet">
+  <link href="../assets/css/styles.dec85f1a.css" rel="stylesheet">
+  <link href="../assets/css/main.e1ae0bf9.css" rel="stylesheet">
+  <link href="../assets/css/home.css" rel="stylesheet">
 
 </head>
 
@@ -61,8 +62,20 @@
         <li class="nav_list-item"><a class="nav_list-link" href="startups.html">Стартапам</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="investment.html">Инвестиции</a></li>
         <li class="nav_list-item"><a class="nav_list-link" href="team.html">Команда</a></li>
+        <div class="langs">
+          <img src="../assets/img/language_24px.svg" alt="">
+          <ul class="langs__list">
+            <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">RU</a>
+              <div class="dropdown-menu__content langs__submenu">
+                <ul class="langs__list">
+                  <li class="langs__item"> <a class="langs__link  button_theme_dark" href="#">EN</a></li>
+                  <li class="langs__item"> <a class="langs__link  button_theme_dark" href="#">CS</a></li>
+                </ul>
+              </div>
+            </li>
+          </ul>
+        </div>
       </ul>
-
     </nav>
     <main>
       <section class="lead">
