--- a/ru/news.html
+++ b/ru/news.html
@@ -61,8 +61,21 @@
               <li class="nav_list-item"><a class="nav_list-link" href="startups.html">Стартапам</a></li>
               <li class="nav_list-item"><a class="nav_list-link" href="investment.html">Инвестиции</a></li>
               <li class="nav_list-item"><a class="nav_list-link" href="team.html">Команда</a></li>
+              <div class="langs">
+                <img src="../assets/img/language_24px.svg" alt="">
+                <ul class="langs__list">
+                  <li class="langs__item langs__dropdown-menu dropdown-menu"> <a class="langs__link button_theme_dark" href="#">RU</a>
+                    <div class="dropdown-menu__content langs__submenu">
+                      <ul class="langs__list">
+                        <li class="langs__item"> <a class="langs__link  button_theme_dark" href="#">EN</a></li>
+                        <li class="langs__item"> <a class="langs__link  button_theme_dark" href="#">CS</a></li>
+                      </ul>
+                    </div>
+                  </li>
+                </ul>
+              </div>
           </ul>
-
+          
       </nav>
     <main>
       <section class="apps__lead">
