--- a/ru/apps.html
+++ b/ru/apps.html
@@ -167,8 +167,8 @@
                             <p class="apps__brief-text">Сервис (страница), где владелец (пользователь) размещает информацию о&nbsp;себе и своем окружении в&nbsp;фото и видео формате.</p>
                         </div>
                         <div class="apps__brief-images-container">
-                            <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/profile_ios.jpg" class="apps__brief-image" /></div>
-                            <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/profile_android.jpg" class="apps__brief-image" /></div>
+                            <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/profile_ios.png" class="apps__brief-image" /></div>
+                            <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/profile_android.png" class="apps__brief-image" /></div>
                         </div>
                     </li>
                     <li class="apps__briefs-item">
@@ -188,8 +188,8 @@
                             <p class="apps__brief-text">Агрегатор контента SFERA, который будет формировать вашу новостную ленту с развивающим контентом. Сервис не решает за Вас, что Вам показывать. Вы увидите весь контент на который подписаны, плюс лучшее в системе за определенный промежуток времени.</p>
                         </div>
                         <div class="apps__brief-images-container">
-                            <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/lenta_ios.jpg" class="apps__brief-image" /></div>
-                            <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/lenta_android.jpg" class="apps__brief-image" /></div>
+                            <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/lenta_ios.png" class="apps__brief-image" /></div>
+                            <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/lenta_android.png" class="apps__brief-image" /></div>
                         </div>
                     </li>
                     <li class="apps__briefs-item">
