--- a/ru/startups.html
+++ b/ru/startups.html
@@ -83,7 +83,7 @@
           <div class="lead">
             <div class="lead__texts">
               <h1 class="lead__title">приглашаем<br><span class="lead__title-color">стартапы</span></h1>
-              <p class="lead__text">Для действующих стартапов, которые </br> находятся на стадии разработки или уже </br> имеют работающий функционал мы готовы </br> рассмотреть вопрос интеграции в SFERA, </br>при соблюдении следующих условий.</p>
+              <p class="lead__text">Для действующих стартапов, которые находятся на</br> стадии разработки или уже  имеют работающий </br>функционал мы готовы  рассмотреть вопрос интеграции</br> в SFERA, при соблюдении следующих условий.</p>
               <div class="lead__links-container apps__lead-links-container">
                 <ul class="lead__download-links-list">
                   <li class="lead__download-links-list-item"><a class="lead__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
