--- a/ru/team.html
+++ b/ru/team.html
@@ -79,7 +79,7 @@
       </nav>
     <main>
       <div class="team">
-        <h1 class="lead__title">Наша команда</h1>
+        <h1 class="lead__title">НАША КОМАНДА</h1>
         <div class="team__body">
           <div class="team__column">
             <a class="block-team__item block-team__item_b item" href="#">
