--- a/ru/investment.html
+++ b/ru/investment.html
@@ -108,9 +108,9 @@
             <div class="card-body-content">
               <ul class="card-body__link">
                 <li class="card-body__list_1"> Скопируйте номер карты и отправьте желаемую сумму.</li>
-                <p class="card-body__list_2">4584-4328-3958-7574 <a class="card-body__list_copy" href=""><img src="../assets/img/investment/content_copy.svg" alt=""></a></p>
+                <p class="card-body__list__color">4584-4328-3958-7574 <a class="card-body__list_copy" href=""><img src="../assets/img/investment/content_copy.svg" alt=""></a></p>
                 <li class="card-body__list_3"> Отправьте E-mail, указав сумму перевода. Обратным письмом мы подтвердим отправленную вами сумму и привязку её к вашему E-mail.</li>
-                <li class="card-body__list_4">invest@sfera.zone <a class="card-body__list_copy" href=""><img src="../assets/img/investment/content_copy.svg" alt=""></a></li>
+                <li class="card-body__list__color">invest@sfera.zone <a class="card-body__list_copy" href=""><img src="../assets/img/investment/content_copy.svg" alt=""></a></li>
               </ul>
               <div class="card-body__text">Осуществляя перевод, вы подтверждаете, что четко понимаете основы и понятия венчурного инвестирования и принципов работы стартапа, а также все риски, связанные с этим.</div>
             </div>
@@ -131,9 +131,6 @@
               </div>
             </div>
           </div>
-          <!-- <div class="sfera__column">
-            <div class="sfera__image ibg"><img src="../assets/img/investment/investment_logo.png" alt=""></div>
-          </div> -->
         </div>
       </div>
   </section>
@@ -154,23 +151,11 @@
   </div>
 </div>
 <div class="sfera-2">
-
-  <div class="sfera__wrapper">
-  <div class="sfera-2__column">
-    <div class="sfera-2-body">
-      <div class="sfera-2-body-content">
-        <div class="sfera-2-body__uptext">Не делайте этого, если</div>
-        <ol class="sfera-2-body__link">
-
-  <!-- <div class="sfera-2__column">
-    <div class="sfera-2__image ibg"><img src="../assets/img/investment/investment_logo.png" alt=""></div>
-  </div> -->
   <div class="sfera-2__column">
     <div class="sfera-2-body">
       <div class="sfera-2-body-content">
         <div class="sfera-2-body__uptext">Не делайте этого, если:</div>
-        <ul class="sfera-2-body__link">
-
+        <ol class="sfera-2-body__link">
           <li>Считаете, что это обман.</li>
           <li>Не верите в проект.</li>
           <li>Выделяемая сумма для вас значима.</li>
@@ -181,17 +166,7 @@
     </div>
   </div>
 </div>
-
 </div>
-
-<!-- <div class="goal">
-  <div class="goal-body">
-    <div class="goal-body-content">
-      <div class="goal-body__title">Наша главная цель в работе с инвесторами — это Х100 для инвесторов</div>
-    </div>
-  </div>
-</div> -->
-
     </main>
     <footer class="footer section section_theme_dark" role="footer">
       <div class="footer__container">
