--- a/index.html
+++ b/index.html
@@ -73,12 +73,10 @@
 						</li>
 					</ul>
 				</div>
+				<div class="langs__arrow"></div>
 			</ul>
 		</nav>
-</div>
-
-		<!-- <div class="star-one"></div>
-		<div class="star-two"></div> -->
+	</div>
 		<main>
 			<section class="section__landing">
 				<figure class="section-first">
@@ -96,8 +94,6 @@
 									<li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
 								</ul>
 							</div>
-							<!-- <button class="button-android"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="provisions_android__links_link">СКАЧАТЬ ANDROID</a></button>
-							<button class="button-iOS"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="provisions__links_link">СКАЧАТЬ iOS</a></button> -->
 						</li>
 					</ul>
 				</figure>
@@ -106,9 +102,9 @@
 					<span class="section-image-two"></span>
 			</section>
 
-			<div class="lightning">
+			<!-- <div class="lightning">
 				<img src="./assets/image-lending/1920/line.png" alt="image vector">
-			</div>
+			</div> -->
 			<!-- <div class="star-three"></div>
 			<div class="star-for"></div> -->
 			<section class="section-two">
@@ -132,7 +128,7 @@
 				</div>
 				<!-- <div class="star-five"></div> -->
 			</section>
-			<p class="about-as-heading"><span class="about-as-heading-color">БУДЬ ПЕРВЫМ</span> - ПОМОГИ НАМ <br> ПРОТЕСТИРОВАТЬ ПРИЛОЖЕНИЕ</p>
+			<p class="section-about-as-heading"><span class="about-as-heading-color">БУДЬ ПЕРВЫМ</span> - ПОМОГИ НАМ <br> ПРОТЕСТИРОВАТЬ ПРИЛОЖЕНИЕ</p>
 			<section class="block-for">
 				<article class="block-for-list">
 					<ul class="list-left-for">
@@ -281,7 +277,7 @@
 				</div>
 			</div>
 		</section>
-			<img src="./assets/image-lending/1920/line.png" alt="" class="what-is-already-background"></img>
+			<!-- <img src="./assets/image-lending/1920/line.png" alt="" class="what-is-already-background"></img> -->
 			<!-- <div class="star-nine"></div>
 			<div class="star-ten"></div> --> 
 			<section class="block-seven" id="download">
@@ -388,8 +384,8 @@
         <div class="footer__download-links">
           <h2 class="footer__title color_grey">Мы не будем менять мир.<br>Мы перепишем код.</h2>
           <ul class="footer__download-links-list">
-            <li class="footer__download-links-list-item"><a class="footer__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
-            <li class="footer__download-links-list-item"><a class="footer__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
+            <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
+            <li class="footer__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="footer__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
           </ul>
         </div>
         <div class="footer__social-links">
@@ -402,6 +398,7 @@
             
           </ul>
         </div>
+				<a href="" class="footer-top"><img src="./assets/img/arrow_upward_24px.svg" alt=""></a>
         <div class="footer__copyright">
           <p class="footer__copyright-text"><a class="link link_theme_dark" href="#">Положение SFERA</a></p>
           <p class="footer__copyright-text">© Copyright 2019-2022 <a class="link link_theme_dark" href="https://sfera.zone">https://sfera.zone</a> — Проект SFERA | Все права защищены ООО «СФЕРА»</p>
