--- a/ru/downloads.html
+++ b/ru/downloads.html
@@ -85,8 +85,8 @@
               <h1 class="lead__title"> скачивай<br><span  class="lead__title-color"> и тестируй</span></h1>
               <p class="lead__subtitle">Скачивайте приложения и погружайтесь<br>в нашу цифровую экосистему.</p>
               <ul class="lead__download-links-list">
-                <li class="lead__download-links-list-item"><a class="lead__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
-                <li class="lead__download-links-list-item"><a class="lead__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
+                <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
+									<li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
               </ul>
             </div>
             <div class="lead__images">
@@ -135,8 +135,8 @@
           <h2 class="footer__title color_grey">Мы не будем менять мир.<br> 
 Мы перепишем код.</h2>
           <ul class="footer__download-links-list">
-            <li class="footer__download-links-list-item"><a class="footer__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
-            <li class="footer__download-links-list-item"><a class="footer__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
+            <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
+            <li class="footer__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="footer__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
           </ul>
         </div>
         <div class="footer__social-links">
@@ -146,9 +146,9 @@
             <li class="socials-list__item"><a class="socials-list__link socials-list_type_vk" href="#" title="Мы ВКонтакте">VKontakte</a></li>
             <li class="socials-list__item"><a class="socials-list__link socials-list_type_dzen" href="#" title="Мы Дзене">Дзен</a></li>
             <li class="socials-list__item"><a class="socials-list__link socials-list_type_instagram" href="#" title="Наш Инстаграм">Instagram </a></li>
-            
           </ul>
         </div>
+        <a href="" class="footer-top"><img src="../assets/img/arrow_upward_24px.svg" alt=""></a>
         <div class="footer__copyright">
           <p class="footer__copyright-text"><a class="link link_theme_dark" href="#">Положение SFERA</a></p>
           <p class="footer__copyright-text">© Copyright 2019-2022 <a class="link link_theme_dark" href="https://sfera.zone">https://sfera.zone</a> — Проект SFERA | Все права защищены ООО «СФЕРА»</p>
