--- a/ru/home.html
+++ b/ru/home.html
@@ -87,8 +87,8 @@
                 <br> развития и пользы вашей жизни</p>
               <p class="lead__slogan">Изменим мир вместе</p>
               <ul class="lead__download-links-list">
-                <li class="lead__download-links-list-item"><a class="lead__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
-                <li class="lead__download-links-list-item"><a class="lead__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
+                <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
+                <li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
               </ul>
             </div>
             <div class="lead__image"> <img src="./assets/img/home/main.png" class="lead__image-main" /></div>
@@ -206,9 +206,7 @@
         </div>
         <div class="swiper__pause"><img src="./assets/img/home/pause_circle_outline_24px.svg" /></div>
       </section>
-
     </main>
-
     <footer class="footer section section_theme_dark" role="footer">
       <div class="footer__container">
         <div class="footer__contacts">
@@ -224,8 +222,8 @@
           <h2 class="footer__title color_grey">Мы не будем менять мир.<br> 
 Мы перепишем код.</h2>
           <ul class="footer__download-links-list">
-            <li class="footer__download-links-list-item"><a class="footer__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
-            <li class="footer__download-links-list-item"><a class="footer__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
+            <li class="footer__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="footer__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
+            <li class="footer__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="footer__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
           </ul>
         </div>
         <div class="footer__social-links">
@@ -236,6 +234,7 @@
             <li class="socials-list__item"><a class="socials-list__link socials-list_type_vk" href="#" title="Мы ВКонтакте">VKontakte</a></li>
           </ul>
         </div>
+        <a href="" class="footer-top"><img src="../assets/img/arrow_upward_24px.svg" alt=""></a>
         <div class="footer__copyright">
           <p class="footer__copyright-text"><a class="link link_theme_dark" href="#">Положение SFERA</a></p>
           <p class="footer__copyright-text">© Copyright 2019-2022 <a class="link link_theme_dark" href="https://sfera.zone">https://sfera.zone</a> — Проект SFERA | Все права защищены ООО «СФЕРА»</p>
