--- a/index.html
+++ b/index.html
@@ -25,19 +25,19 @@
 				<i class="fa fa-bars"></i>
 			</label>
 			<div class="block-logo">
-				<a class="button button_form_circle button_theme_image link_hide-text openButton"href=""><span class="button__play-video">Просмотреть видео о SFERA</span></a>
-				<div class="loginPopup">
-					<div class="formPopup" id="popupForm">
-							<button type="button" class="btn cancel">Close</button>
+
+
+				<div class="modal" id="modal">
+					<div class="modal__box">
+						<video  controls="controls" autoplay="autoplay">
+							<source src="assets/video/video.mp4">
+						</video>
+						<a href="#" class="btn btn--close" id="btn_close">close</a>
 					</div>
 				</div>
 
-				<!-- <a class="button button_form_circle button_theme_image link_hide-text openButton" onclick="openVideo()" href=""><span class="button__play-video">Просмотреть видео о SFERA</span></a>
-				<div class="loginPopup">
-					<div class="formPopup" id="popupForm">
-							<button type="button" class="btn cancel" onclick="closeVideo()">Close</button>
-					</div>
-				</div> -->
+				<a class="button button_form_circle button_theme_image link_hide-text btn" id="btn" href=""><span class="button__play-video">Просмотреть видео о SFERA</span></a>
+
 				<label class="logo">
 					<svg width="247" height="40" viewBox="0 0 247 40" fill="none" class="logo__image">
 						<g filter="url(#filter0_i_6961_2109)">
@@ -417,9 +417,8 @@
         </div>
       </div>
     </footer>
-		
 		<script src="/assets/js/index.js"></script>
-		<script src="./assets/js/main.js"></script>
+		<script src="assets/js/main.js"></script>
 	</body>
 
 </html>
