--- a/ru/downloads.html
+++ b/ru/downloads.html
@@ -25,18 +25,11 @@
         <i class="fa fa-bars"></i>
       </label>
       <div class="block-logo">
-
-        <div class="modal" id="modal">
-					<div class="modal__box">
-						<video  controls="controls"autoplay="autoplay">
-							<source src="../assets/video/video.mp4">
-						</video>
-						<a href="#" class="btn btn--close" id="btn_close">close</a>
-					</div>
+        <div class="video-container">
+					<span class="close">&#10006;</span>
+					<video class="video" src="../assets/video/video.mp4" controls></video>
 				</div>
-
-				<a class="button button_form_circle button_theme_image link_hide-text btn" id="btn" href=""><span class="button__play-video">Просмотреть видео о SFERA</span></a>
-
+				<i class="button button_form_circle button_theme_image link_hide-text  video-player" ><span class="button__play-video">Просмотреть видео о SFERA</span></i>
         <label class="logo">
           <svg width="247" height="40" viewBox="0 0 247 40" fill="none" class="logo__image">
             <g filter="url(#filter0_i_6961_2109)">
