--- a/index.html
+++ b/index.html
@@ -87,8 +87,9 @@
 		</nav>
 	</div>
 		<main>
+
 			<section class="section__landing">
-				<figure class="section-first">
+				<div class="section-first">
 					<ul class="list-left">
 						<li class="section-first-paragraf"><span class="section-first-color-sfera">SFERA</span> - это не только</li>
 						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="" class="link-list-left-one">Отличное качество звонков</li>
@@ -96,37 +97,28 @@
 						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="" class="link-list-left-one">Доступный сервис знакомств</li>
 						<li class="link-list-left"><img src="./assets/image-lending/general/check_circle_outline_24px.svg" alt="" class="link-list-left-one">Мгновенный поиск друзей</li>
 						<li class="link-list-left-color">Все бесплатно и без рекламмы</li>
-						<li class="section-button">
-							<div class="lead__links-container apps__lead-links-container">
-								<ul class="lead__download-links-list">
-									<li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
-									<li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
-								</ul>
-							</div>
-						</li>
+					<li class="lead__links-container apps__lead-links-container">
+						<ul class="lead__download-links-list">
+							<li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
+							<li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
+						</ul>
 					</ul>
-				</figure>
-				<div class="section-img">
-					<span class="section-image-one"></span>
-					<span class="section-image-two"></span>
+				</li>
+	
+				<div class="section-block-one">
+					<span ><img class="section-image-one" src="assets/image-lending/1920/block 1-1.png" alt=""></span>
+					<span ><img class="section-image-two" src="assets/image-lending/1920/block 1-2.png" alt=""></span>
+				</div>
+			</div>
 			</section>
-
-			<!-- <div class="lightning">
-				<img src="./assets/image-lending/1920/line.png" alt="image vector">
-			</div> -->
-			<!-- <div class="star-three"></div>
-			<div class="star-for"></div> -->
 			<section class="section-two">
 				<figure class="section-two-image">
-					<span class="section-two-image-one"></span>
-					<span class="section-two-image-two"></span>
+					<span ><img class="section-two-image-one" src="assets/image-lending/300х600_андроид_меню/300х600-андроид.gif" alt=""></span>
+					<span><img class="section-two-image-two" src="assets/image-lending/300х600_айфон_меню/300х600-айфон.gif" alt=""></span>
 				</figure>
 				<div class="section-two-content">
-					<span class="section-two-content-social-block-mobile">Новый мессенджер</span>
-					<span class="section-two-content-social-block">Социальная сеть</span>
 					<span class="section-two-content-message">Месcенджер</span>
 					<span class="section-two-content-number">ЦИФРОВАЯ<br>ЭКОСИСТЕМА</span>
-					<span class="section-two-content-number-two">ЦИФРОВАЯ ЭКОСИСТЕМА</span>
 					<span class="section-two-content-social">Социальная сеть</span>
 				</div>
 			</section>
@@ -138,8 +130,9 @@
 				<!-- <div class="star-five"></div> -->
 			</section>
 			<p class="section-about-as-heading"><span class="about-as-heading-color">БУДЬ ПЕРВЫМ</span> - ПОМОГИ НАМ <br> ПРОТЕСТИРОВАТЬ ПРИЛОЖЕНИЕ</p>
+			
 			<section class="block-for">
-				<article class="block-for-list">
+				<div class="block-for-list">
 					<ul class="list-left-for">
 						<li><button class="block-first-color">#Что нужно тестировать?</button></li>
 						<li class="link-list-left-for-li"><img src="./assets/image-lending/general/4105933-check-checked-checklist-mark-tick-todo-list_113935.svg" alt="" class="link-list-left-for">Звонки</li>
@@ -147,13 +140,15 @@
 						<li class="link-list-left-for-li"><img src="./assets/image-lending/general/4105933-check-checked-checklist-mark-tick-todo-list_113935.svg" alt="" class="link-list-left-for">Загрузка медиа</li>
 						<li class="block-first-color-for">Пиши о проблемах в чат с основателем<br>ID SFERA 100 100 000 </li>
 					</ul>
-				</article>
-				<article class="block-for-image">
-					<span class="block-for-image-one"></span>
-					<span class="block-for-image-two"></span>
-				</article>
-				<div class="star-six"></div>
+				</div>
+
+				<div class="block-for-image">
+					<span ><img class="block-for-image-one" src="assets/image-lending/1920/block 3-1.png" alt=""></span>
+					<span ><img class="block-for-image-two" src="assets/image-lending/1920/block 3-2.png" alt=""></span>
+				</div>
+		
 			</section>
+			
 <section class="section-card">
 			<p class="about-as-heading">ЧТО ЕСТЬ <span class="about-as-heading-color"> УЖЕ СЕЙЧАС</span></p>
 			<div class="star-seven"></div>
@@ -285,12 +280,8 @@
 					<p class="card-block-botton">Трудный выбор? Спроси<br>мнение других пользователей</p>
 				</div>
 			</div>
-		</section>
-			<!-- <img src="./assets/image-lending/1920/line.png" alt="" class="what-is-already-background"></img> -->
-			<!-- <div class="star-nine"></div>
-			<div class="star-ten"></div> --> 
-			<section class="block-seven" id="download">
-
+		</section> 
+		<section class="block-seven" id="download">
 				<article>
 					<img src="./assets/image-lending/1920/SFERA-logo 3.png" alt="image sfera" class="block-seven-image">
 				</article>
@@ -306,10 +297,6 @@
 						<p class="block-seven-text">Каждый сервис в системе, либо<br>
 							полностью уникален, либо имеет<br>
 							отличительные особенности в сравнении<br>с аналогами.</p>
-						<!-- <div class="block-seven-buttons">
-							<button class="button-android"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="provisions_android__links_link">СКАЧАТЬ ANDROID</a></button>
-							<button class="button-iOS"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="provisions__links_link">СКАЧАТЬ iOS</a></button>
-						</div> -->
 					</div>
 				</article>
 			</section>
