--- a/ru/apps.html
+++ b/ru/apps.html
@@ -128,28 +128,6 @@
                 </div>
             </div>
         </section>
-        <!-- <section class="section lead apps__lead">
-            <div class="section__wrapper">
-                <div class="lead__grid apps__lead-grid">
-                  <div class="flex">
-                    <div class="lead__text-container apps__lead-text-container">
-                        <p class="lead__text">Основой приложения SFERA PROJECT является мессенджер, на&nbsp;базе которого существуют уже сейчас и постоянно добавляются разносторонние сервисы, например, сервис по&nbsp;поиску работы (Job Light), сервис знакомств (MeetNet), сервис по&nbsp;поиску друзей (Find Friends) <span class="nowrap">и т.д.</span>
-                            Все сервисы являются неотъемлемой частью SFERA и работают как единое приложение. На&nbsp;данный момент все сервисы разрабатываются нами, но в&nbsp;будущем планируется подключение сторонних сервисов.</p>
-                        <p class="lead__text">На данный момент в&nbsp;системе доступны сервисы первого этапа разработки.</p>
-                    </div>
-                    <div class="lead__image-container apps__lead-image-container">
-                        <div class="apps__lead-image-wrapper"><img src="../assets/img/apps/lead-image.png" class="apps__lead-image" /></div>
-                    </div>
-                  </div>  
-                    <div class="lead__links-container apps__lead-links-container">
-              <ul class="lead__download-links-list">
-                <li class="lead__download-links-list-item"><a class="lead__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
-                <li class="lead__download-links-list-item"><a class="lead__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
-              </ul>
-            </div>
-                </div>
-            </div>
-        </section> -->
         <section class="section apps__briefs">
             <div class="section__wrapper">
                 <ul class="apps__briefs-list">
@@ -167,7 +145,7 @@
                       </ul>
                         <div class="apps__brief-text-container">
                             <h2 class="section__title">Главный профиль</h2>
-                            <p class="apps__brief-text">Сервис (страница), где владелец (пользователь) размещает информацию о&nbsp;себе и своем окружении в&nbsp;фото и видео формате.</p>
+                            <p class="apps__brief-text">Страница, где владелец размещает информацию о себе и своем окружении в фото и видео-формате.</p>
                         </div>
                         <div class="apps__brief-images-container">
                             <div class="apps__brief-image-wrapper"><img src="../assets/img/apps/profile_ios.png" class="apps__brief-image" /></div>
