--- a/ru/investment.html
+++ b/ru/investment.html
@@ -89,11 +89,11 @@
               <div class="investment-body__title">приглашаем <span class="investment-body__title_color">инвесторов</span></div>
               <div class="investment-body__text"><p>На данный момент финансирование проекта осуществляется засчёт собственных средств и средств инвесторов.</p>
                 <p>Наша главная цель в работе с инвесторами — это Х100 для инвесторов</p></div>
-              <ul class="lead__download-links-list">
-                <li class="lead__download-links-list-item"><a href="" class="lead__download-link button button_theme_dark button_type_android">Скачать на Android</a></li>
-                <li class="lead__download-links-list-item"><a href="" class="lead__download-link button button_theme_dark button_type_ios">Cкачать на ois</a></li>
-              </ul>
-            </div>
+                <ul class="lead__download-links-list">
+                  <li class="lead__download-links-list-item"><a href="https://play.google.com/store/apps/details?id=zone.sfera" class="lead__download-link button button_theme_dark button_type_android">Скачать на Android </a></li>
+                    <li class="lead__download-links-list-item"><a href="https://apps.apple.com/app/sfera-project/id1498046044" class="lead__download-link button button_theme_dark button_type_ios">Скачать на iOS</a></li>
+                </ul>
+              </div>
           </div>
         </div>
         <div class="investment__column">
