--- a/ru/apps.html
+++ b/ru/apps.html
@@ -354,7 +354,7 @@
             </div>
         </section>
         <section class="section apps__future">
-            <h2 class="section__title align_center">сервисы второго этапа разработки</h2>
+            <h2 class="section__title align_wiper">сервисы второго этапа разработки</h2>
             <div class="swiper">
                 <div class="swiper-wrapper apps__future-slide">
                     <div class="swiper-slide">
@@ -398,7 +398,7 @@
             </div>
         </section>
         <section class="section apps__future">
-          <h2 class="section__title align_center">сервисы второго этапа разработки</h2>
+          <h2 class="section__title align_wiper">сервисы второго этапа разработки</h2>
           <div class="swiper">
               <div class="swiper-wrapper apps__future-slide">
                   <div class="swiper-slide">
