адаптация главная.приложение.скачать.новости 768

--- a/ru/downloads.html
+++ b/ru/downloads.html
@@ -100,24 +100,11 @@
             </div>
           </div>
         </div>
-      </section>
-      <section class="description">
         <div class="description__wrapper">
-          <div class="description__heading">
-            <div class="description__heading__content">
-              <h2 class="description__heading__as"><span class="description__heading__as-color">БУДЬ ПЕРВЫМ</span> - ПОМОГИ НАМ <br> ПРОТЕСТИРОВАТЬ ПРИЛОЖЕНИЕ</h2>
-              <ul class="description__list">
-                <li class="description__list__link description__list__link-color">#Что нужно тестировать?</li>
-                <li class="description__list__link"><img class="description__list__link-icon" src="../assets/img/downloads/check_circle_outline_24px.svg" alt="">Звонки</li>
-                <li class="description__list__link"><img class="description__list__link-icon" src="../assets/img/downloads/check_circle_outline_24px.svg" alt="">Отправка сообщений</li>
-                <li class="description__list__link"><img class="description__list__link-icon" src="../assets/img/downloads/check_circle_outline_24px.svg" alt="">Загрузка медиа</li>
-                <li class="description__list__link description__list__link-color">Пиши о проблемах в чат с основателем<br>ID SFERA 100 100 000 </li>
-              </ul>
-            </div>
-            <div class="description__heading__video">
-              <video class="description__video" src="../assets/video/trim.644BC43D-65AA-4772-94FB-E2D1C488CFEE.mov" controls="controls" autoplay>
-
-            </div>
+          <div class="description__heading__content">
+            <h2 class="description__heading__content__heading"><span class="description__heading__content__heading__color">БУДЬ ПЕРВЫМ</span> - ПОМОГИ НАМ ПРОТЕСТИРОВАТЬ ПРИЛОЖЕНИЕ</h2>
+            <p  class="description__heading__content__paragraf">Пиши о проблемах в чат с основателем</p>
+            <p  class="description__heading__content__paragraf">ID SFERA 100 100 000</p>
           </div>
         </div>
       </section>
